--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,21 @@
     <link  href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
 
     <!-- backend css -->
+    <link rel="stylesheet" href="/landing_page/css/bootstrap.min.css">
+
+    <!-- Icon Font CSS -->
+    <link rel="stylesheet" href="/landing_page/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/landing_page/css/material-design-iconic-font.min.css">
+
+    <!-- Plugins CSS -->
+    <link rel="stylesheet" href="/landing_page/css/plugins.css">
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="/landing_page/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="/landing_page/css/responsive.css">
+
 
     <!-- Font Awesome -->
     <link  rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css">
